--- a/.github/workflows/gh.yml
+++ b/.github/workflows/gh.yml
@@ -15,7 +15,7 @@ jobs:
           fetch-depth: 0
 
       - name: Setup Hugo
-        run: wget https://github.com/gohugoio/hugo/releases/download/v0.81.0/hugo_extended_0.81.0_Linux-64bit.deb&&sudo dpkg -i hugo_0.81.0_Linux-64bit.deb
+        run: wget https://github.com/gohugoio/hugo/releases/download/v0.81.0/hugo_extended_0.81.0_Linux-64bit.deb&&sudo dpkg -i hugo_extended_0.81.0_Linux-64bit.deb
 
       - name: Build
         run: hugo
