--- a/config.yaml
+++ b/config.yaml
@@ -51,7 +51,7 @@ params:
         provider: utterances
 
         utterances:
-            repo: YamazakuraH/Blog
+            repo: YamazakuraH/YamazakuraH.github.io
             issueTerm: pathname
             label:
 
