--- a/config.yaml
+++ b/config.yaml
@@ -4,6 +4,8 @@ theme: hugo-theme-stack
 paginate: 5
 title: 169163's blog
 
+googleAnalytics: G-DG786LMHCF
+
 # Change it to your Disqus shortname before using
 disqusShortname: hugo-theme-stack
 
