--- a/.github/workflows/gh.yml
+++ b/.github/workflows/gh.yml
@@ -21,7 +21,7 @@ jobs:
           # extended: true
 
       - name: Build
-        run: hugo
+        run: env HUGO_ENV="production" hugo
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
