--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,7 @@ title: 169163's blog
 disqusShortname: hugo-theme-stack
 
 # GA Tracking ID
-googleAnalytics: G-DG786LMHCF
+googleAnalytics: 
 
 # Theme i18n support
 # Available values: en, fr, id, ja, ko, pt-br, zh-cn
