--- a/config.yaml
+++ b/config.yaml
@@ -28,7 +28,7 @@ params:
 
     footer:
         since: 2020
-        customText: <a href="https://www.upyun.com/?utm_source=lianmeng&utm_medium=referral"><img src="https://cdn.jsdelivr.net/gh/YamazakuraH/YamazakuraH.github.io/CDN/upyun.png" width="40" target="_blank" rel="noopener">本站由又拍云提供CDN加速</a>
+        customText: <a href="https://icp.gov.moe" target="_blank">萌ICP备 </a><a href="https://icp.gov.moe/?keyword=20201145" target="_blank"> 20201145号</a>
 
     dateFormat:
         published: Jan 02, 2006
